--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "fluent-ffmpeg": "^2.1.2",
     "joi": "^17.11.0",
     "lodash": "^4.17.21",
